force-app/main/default/objects/Archive_Row_Count__c/Archive_Row_Count__c.object-meta.xml
<CustomObject>
    <description>Durable state for a single archive row count. The Azure archive publishes no row count - $count=true is ignored and the {&quot;value&quot;:[...]} envelope carries no total - so a total has to be arrived at by reading every matching row, 1000 per callout. At 1M+ archived rows that is far more than the 100 callouts one Apex transaction allows, so ArchiveCountQueueable counts across a chain of transactions and keeps its running total, its continuation cursor and its status here. Rows are a cache keyed on the filters, so a repeat of the same question is answered instantly instead of counted again.</description>
    <label>Archive Row Count</label>
    <nameField>
        <displayFormat>ARC-{00000000}</displayFormat>
        <label>Archive Row Count Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Archive Row Counts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>