force-app/main/default/objects/Archive_Row_Count__c/fields/Cache_Key__c.field-meta.xml
<CustomField>
    <fullName>Cache_Key__c</fullName>
    <description>Identifies the question this row answers: object, date basis and date range, joined. Unique and an external id so the controller can upsert a count request without first querying for one, and so two users asking the same question share one count rather than starting two.</description>
    <externalId>true</externalId>
    <label>Cache Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>