force-app/main/default/objects/Archive_Row_Count__c/fields/Callouts_Used__c.field-meta.xml
<CustomField>
    <fullName>Callouts_Used__c</fullName>
    <description>Total callouts spent across every chained job for this count. Diagnostic: at 1000 rows per callout this is roughly the total divided by a thousand, and it is how you tell a slow count from a stuck one.</description>
    <label>Callouts Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>