force-app/main/default/objects/Archive_Row_Count__c/fields/Chain_Depth__c.field-meta.xml
<CustomField>
    <fullName>Chain_Depth__c</fullName>
    <description>How many jobs have run for this count. Bounded by ArchiveCountQueueable.MAX_CHAIN_DEPTH so a count that never converges cannot enqueue itself forever.</description>
    <label>Chain Depth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>