force-app/main/default/objects/Archive_Row_Count__c/fields/Completed_At__c.field-meta.xml
<CustomField>
    <fullName>Completed_At__c</fullName>
    <description>When the count finished. Drives cache expiry: a completed count older than the freshness window is recounted, because later archival runs add rows.</description>
    <label>Completed At</label>
    <type>DateTime</type>
</CustomField>