force-app/main/default/objects/Archive_Row_Count__c/fields/Date_Basis__c.field-meta.xml
<CustomField>
    <fullName>Date_Basis__c</fullName>
    <description>ARCHIVED or CREATED - which date the range was applied to. Part of the cache key because the two give wildly different answers: these records were created in 2025 and archived in 2026.</description>
    <label>Date Basis</label>
    <length>20</length>
    <type>Text</type>
</CustomField>