force-app/main/default/objects/Archive_Row_Count__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Why the count stopped, when Status is Failed.</description>
    <label>Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>