force-app/main/default/objects/Archive_Row_Count__c/fields/From_Date__c.field-meta.xml
<CustomField>
    <fullName>From_Date__c</fullName>
    <description>Start of the counted range, inclusive. Blank means unbounded.</description>
    <label>From Date</label>
    <type>Date</type>
</CustomField>