force-app/main/default/objects/Archive_Row_Count__c/fields/Next_Partition_Key__c.field-meta.xml
<CustomField>
    <fullName>Next_Partition_Key__c</fullName>
    <description>Where the next chained job resumes from: the x-ms-continuation-NextPartitionKey of the last response. Blank once the archive has been walked to the end.</description>
    <label>Next Partition Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>