force-app/main/default/objects/Archive_Row_Count__c/fields/Next_Row_Key__c.field-meta.xml
<CustomField>
    <fullName>Next_Row_Key__c</fullName>
    <description>Companion to Next Partition Key - the x-ms-continuation-NextRowKey of the last response.</description>
    <label>Next Row Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>