force-app/main/default/objects/Archive_Row_Count__c/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <description>The archived object being counted. One row counts one object; a multi-object report sums several rows, because a continuation token belongs to a single table and cannot be interleaved with another.</description>
    <label>Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>