force-app/main/default/objects/Archive_Row_Count__c/fields/Running_Total__c.field-meta.xml
<CustomField>
    <fullName>Running_Total__c</fullName>
    <description>Rows counted so far. Equals the true total only once Status is Complete; while Running it is a floor that grows.</description>
    <label>Running Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>