force-app/main/default/objects/Archive_Row_Count__c/fields/Started_At__c.field-meta.xml
<CustomField>
    <fullName>Started_At__c</fullName>
    <description>When the first job for this count was enqueued. Used to abandon a count whose chain died without writing a Failed status.</description>
    <label>Started At</label>
    <type>DateTime</type>
</CustomField>