force-app/main/default/objects/Archive_Row_Count__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Running, Complete or Failed. Only Complete may be shown to a user as a total; Running carries a partial figure that is a floor, not an answer.</description>
    <label>Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>