force-app/main/default/objects/Archive_Row_Count__c/fields/To_Date__c.field-meta.xml
<CustomField>
    <fullName>To_Date__c</fullName>
    <description>End of the counted range, inclusive of its whole day. Blank means unbounded.</description>
    <label>To Date</label>
    <type>Date</type>
</CustomField>